# OpenAgora

./: .gitignore  CDP_SETUP_GUIDE.md  DEMO_WALKTHROUGH.md  PLAN.md  Procfile.runner  README.md  claude_desktop_config.example.json  demo_cli.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run_multirunner.py  vercel.json
agents/multi_runner/: README.md  __init__.py  railway.json  runner.py
agents/schema_architect/: README.md  agent.py
api/: index.py  requirements.txt
certs/: mongodb-atlas-ca-bundle.pem
scripts/: create_marketplace_wallet.py  register_local_agent.py  run_demo.py  run_demo_flow.py  run_full_demo.py  run_ui.sh  seed_data.py  seed_demo_agents.py  test_cdp_connection.py  test_full_flow.py  test_hybrid_matching.py  test_scenarios.py  validate_agents.py
src/bazaar/: __init__.py  api.py  auth.py  cli.py  component_schemas.py  config.py  db.py  files.py  llm.py  models.py  webhooks.py
src/bazaar/agents/: __init__.py  executor.py
src/bazaar/bidding/: __init__.py  accept.py  negotiate.py  rank.py  submit.py
src/bazaar/execution/: __init__.py  galileo_eval.py  quality.py  runner.py
src/bazaar/jobs/: __init__.py  create.py  match.py
src/bazaar/mcp/: __init__.py  config.py  server.py
src/bazaar/payments/: __init__.py  escrow.py  refund.py  release.py  x402_client.py
src/bazaar/registry/: __init__.py  benchmark.py  register.py
src/openagora/: __init__.py  agent.py  auth.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AgentCard.tsx  (+13 more)
(+8 files in other folders)
